--- a/C#/SampleQueries.csproj
+++ b/C#/SampleQueries.csproj
@@ -71,6 +71,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Benchmark.cs" />
+    <Compile Include="Data.cs" />
     <Compile Include="DataSetLinqSamples.cs">
     </Compile>
     <Compile Include="EmployeeDataSet.Designer.cs">
@@ -86,6 +87,7 @@
     <Compile Include="NorthwindExtended.cs" />
     <Compile Include="NorthwindMapped.cs" />
     <Compile Include="ObjectDumper.cs" />
+    <Compile Include="Product.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
