specjalne: optymalizacja i generalizacja BetterMax

--- a/C#/SampleQueries.csproj
+++ b/C#/SampleQueries.csproj
@@ -91,7 +91,7 @@
     <Compile Include="NorthwindMapped.cs" />
     <Compile Include="ObjectDumper.cs" />
     <Compile Include="ObjectReferenceEquality.cs" />
-    <Compile Include="BetterMaxEx.cs" />
+    <Compile Include="LazyEx.cs" />
     <Compile Include="Product.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
